Fix responsiveness on mobile devices
When error with cat displaying randomly was fixed it interfered
with responsiveness on mobile so fixed same in style.css.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -207,8 +207,7 @@ body {
   transform: translate(-60%);
   bottom: 30%;
   animation: ease-in .2s ease-out;
-  padding-top: 30px;
-  padding-left: 20px;
+
   }
   
 .catm1 {
@@ -223,6 +222,7 @@ body {
   padding-bottom: 1px;
   padding-top: 30px;
   padding-left: 20px;
+
 }
 
 .catm2 {
@@ -236,6 +236,7 @@ body {
   animation: ease-in .2s ease-out;
   padding-top: 30px;
   padding-left: 20px;
+
 }
 
 .catm3 {
@@ -249,6 +250,7 @@ body {
   animation: ease-in .2s ease-out;
   padding-top: 30px;
   padding-left: 20px;
+
 }
 
 .catm4 {
@@ -262,6 +264,7 @@ body {
   animation: ease-in .2s ease-out;
   padding-top: 30px;
   padding-left: 20px;
+
 }
 
 .catm5 {
@@ -275,6 +278,7 @@ body {
   animation: ease-in .2s ease-out;
   padding-top: 30px;
   padding-left: 20px;
+
 }
 
 .catm6 {
@@ -288,6 +292,7 @@ body {
   animation: ease-in .2s ease-out;
   padding-top: 30px;
   padding-left: 20px;
+
 }
 
 .catm7 {
@@ -301,6 +306,7 @@ body {
   animation: ease-in .2s ease-out;
   padding-top: 30px;
   padding-left: 20px;
+
 }
 
 .catm8 {
@@ -314,6 +320,12 @@ body {
   animation: ease-in .2s ease-out;
   padding-top: 30px;
   padding-left: 20px;
+
+}
+
+.square-container .square img {
+  max-width: 75%;
+  max-height: 75%;
 }
 
 #hr-style2 {  
@@ -339,6 +351,7 @@ body {
 
 @media screen and (max-width: 950px) {
   .black-cat-moon {
+   
     width: 200px;
     height: 100px;
     left: 0;
@@ -364,8 +377,8 @@ body {
   }
 
 .instructions-p {
-    font-size: 20px;
-    width: 133%;
+    font-size: 15px;
+    width: 100%;
  
   }
 
@@ -379,7 +392,7 @@ body {
 
 #startButton {
   display: inline-block;
-  border-radius: 50px;
+  /* border-radius: 50px; */
   padding: 20px;
 
 
@@ -392,7 +405,7 @@ body {
 .fa-sharp {
   /* display: flex;  */
 
-  width: 133%;
+  width: 110%;
   border-radius: 50px;
   padding: 20px;
   text-align: center;
@@ -416,26 +429,44 @@ body {
 }
 
  .main-container {
-  width: 135%;
+  width: 110%;
+  /* overflow: hidden; */
+  padding-right: 4px;
 
  }
 
  .square-container {
-  /* display: grid; 
-  grid-template-columns: repeat(3, 1fr);
+  display: grid;
   grid-template-rows: repeat(3, 1fr);
-  justify-items: center; 
-  align-items: center;
-
-  height: 150px; */
   background-color: black;
-  width: 135%;
+  grid-template-columns: repeat(auto-fit, minmax(120px, 1fr));
+  justify-items: center;
+  align-items: center;
+  gap: 1px;
+  height: 400px;
+  width: 400px;
+  padding-bottom: 20px;
+  padding-left: 1px;
+
+  padding-right: 25px;
  }
 
+
+
+
+
+
+
+
  .square {
-  width: 150px;
-  height: 150px; 
+  height: 100px; 
+  width: 100px;
+  padding-left: 2px;
+  padding-right: 10px;
   gap: 1px;
+  display: flex;
+  margin: 0 5px;
+
  }
 
  #hr-style2 {
